--- a/bumiseduh.html
+++ b/bumiseduh.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Agency Single</title>
+    <title>BUMI SEDUH</title>
     <!-- Main style -->
     <link rel="shortcut icon" href="./assets/dist/img/logo/11.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/dist/css/real-estate.style.css">
@@ -24,8 +24,8 @@
     <div id="main-wrapper">
       <header class="header">
         <div class="headroom-sticky sticky-scroll">
-          <nav class="navbar navbar-default">
-            <div class="container-fluid">
+          <nav class="navbar navbar-default navbar-home with-location">
+            <div class="container">
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -41,50 +41,34 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class=""><a href="index.html" >Home</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
-                      <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
-                      <li><a href="bumisuplai.html">Bumi Suplai</a></li>
-                    </ul>
-                  </li>
-                  <li class=""><a href="lokasi.html" >Lokasi</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="blog-grid.html">Blog Grid</a></li>
-                      <li><a href="blog-list-thumb.html">Blog List Thumb</a></li>
-                      <li><a href="blog-listing.html">Blog Listing</a></li>
-                      <li><a href="blog-masonary.html">Blog Masonary</a></li>
-                      <li><a href="post-image-single.html">Single Image Post</a></li>
-                      <li><a href="post-gallery-single.html">Single Gallery Post</a></li>
-                      <li><a href="post-video-single.html">Single Video Post</a></li>
-                      <li><a href="post-audio-single.html">Single audio Post</a></li>
-                    </ul>
-                  </li>
-                  <li class=""><a href="bumiseduh.html" >Profil</a></li>
-
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Page <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="contact-us.html">Contact Us</a></li>
-                      <li><a href="pricing-plan.html">Plan &amp; Pricing</a></li>
-                      <li><a href="coming-soon.html">Coming Soon </a></li>
-                      <li><a href="page-404.html">404 page</a></li>
-                      <li><a href="media-elements.html">Media elements</a></li>
-                      <li><a href="typography.html">Typography</a></li>
-                      <li><a href="elements.html">Common elements</a></li>
-                    </ul>
-                  </li>
-                  <li class="login-register-link"><a href="registration.html">
-                      <i class="icon_lock-open_alt"></i>Login or Register</a>
-                  </li>
-                </ul>
+                  <li class="active"><a href="index.html" >Home</a></li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
+                        <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
+                        <li><a href="bumisuplai.html">Bumi Suplai</a></li>
+                      </ul>
+                    </li>
+                    <li class=""><a href="lokasi.html" >Lokasi</a></li>
+                    </li>
+                    <li><a href="bumiseduh.html">Profil</a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="blog-grid.html">Blog Grid</a></li>
+                        <li><a href="blog-list-thumb.html">Blog List Thumb</a></li>
+                        <li><a href="blog-listing.html">Blog Listing</a></li>
+                        <li><a href="blog-masonary.html">Blog Masonary</a></li>
+                        <li><a href="post-image-single.html">Single Image Post</a></li>
+                        <li><a href="post-gallery-single.html">Single Gallery Post</a></li>
+                        <li><a href="post-video-single.html">Single Video Post</a></li>
+                        <li><a href="post-audio-single.html">Single audio Post</a></li>
+                      </ul>
+                  </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </nav>
@@ -95,22 +79,22 @@
         <div class="rq-content-block">
           <div class="container">
             <div class="rq-title-container"> <!-- start breadcrumb -->
-              <h2 class="rq-title">Tentang</h2>
+              <h2 class="rq-title">Bumi Seduh</h2>
               <ol class="breadcrumb rq-subtitle">
-                <li><a href="#">Home</a></li>
-                <li class="active">Tentang</li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active">Bumi Seduh</li>
               </ol>
             </div> <!-- end of breadcrumb -->
             <div class="rq-user-profile-page">  
               <div class="rq-user-listing-single wow fadeIn" data-wow-delay=".1s"> <!-- start company user list -->
                 <div class="rq-user-profile-pic agency-logo">
-                  <img src="assets/dist/img/logo/11.png" alt="">
+                  <img style="height: 160% ; width: 250%;" src="assets/dist/img/logo/1.png" alt="">
                 </div>
                 <div class="rq-user-profile-details">
                   <div class="rq-user-pro-head">
                     <div class="rq-user-name">
-                      <h3><a href="#">Bumi Seduh </a><small> - 12 listing</small></h3>
-                      <p>Inviduals</p>
+                      <h3>Bumi Seduh<small></small></h3>
+                      <p>Cafe</p>
                     </div>
                     <div class="social-login"> <!-- start social icon div -->
                       <ul class="social-page-nav">
@@ -135,55 +119,67 @@
                       </div>
                     </div>
                   </div>
-                  <div class="read-more">
+                  <!-- <div class="read-more">
                     <a href="#" class="rq-btn rq-btn-primary border-radius">See Profile <i class="arrow_right"></i></a>
-                  </div>
+                  </div> -->
                 </div>
               </div> <!-- end user list -->
 
               <!-- start about section -->
               <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
                 <h3 class="rq-title-secondary">Tentang Bumi Seduh</h3>
-                <p class="about-text">
-                  Quisque non dictum eros. Praesent porta vehicula arcu eu ornare. Donec id egestas arcu. Suspendisse auctor ali condimentum ligula ultricies cursus. Vestibulum vel orci vel lacus rhoncus sagittis sed vitae mi. Pellentesque suil molestie elit bibendum tincidunt semper. Aliquam ac volutpat risus. In felis felis, posuere commodo aliquet amit eget, sagittis sed turpis. Phasellus commodo turpis non nunc egestas, et egestas felis pretium. Pellentesque suli  dignissim libero vitae tincidunt semper. Nam id ante nisi. Nam sollicitudin, dolor non suscipit feugiat, nibh lacus commodo metus, nec tempus dui velit sagittis velit. Pellentesque elementum risus rhoncus justo porta, at varius odio consequat. Duis non augue adipiscing, posuere quam non, tempus urna.
+                <p class="about-text" style="text-align: justify;color: black;" >
+                  &nbsp;&nbsp;&nbsp;&nbsp; Bumi Seduh merupakan badan usaha yang fokus bergerak di bidang ekosistem industri kopi di Indonesia, yakni membuka dan mengelola Coffee Shop, suplai bahan baku dan peralatan, kosultasi, serta pengembangan SDM. Perusahaan ini mulai berdiri tahun 2021 berkantor di Jl. Wonosari KM 7 Bantul Yogyakarta.
+                  <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp;Peluang bisnis ekosistem industri kopi di Indonesia sangat potensial dan pasarnya terus tumbuh berkembang setiap tahun. Coffee shop sebagai hilir dari industri ini terus mengalami perkembangan pesat, dan terus memperoleh minat dari pelanggan. Semakin tumbuhnya Coffee shop ini kemudian menciptakan peluang besar pada permintaan bahan baku, peralatan dan mesin, sumber daya manusia (SDM), serta konsultasi pengelolaan dan pemasaran semakin meningkat setiap tahunnya.
+                  <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp;Dalam proses menjalankan usaha, PT Bumi Seduh Indonesia siap membuka diri untuk bermitra secara  transparan, akuntabel dan bertanggung jawab, serta berpegang teguh pada prinsp-prinsip bisnis yang berorientasi profit, berkontribusi pada sosial, dan mencapai kemakmuran bersama.
+                  
                 </p>
-                <p class="about-text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent.</p>
-
               </div>
-              <div class="rq-agency-location-map">
-                <h3 class="rq-title-secondary">Position</h3>
-                <div class="rq-contact-us-map"> <!-- start map portion -->
-                  <div id="map"></div>
-                </div> <!-- end map portion -->
+              <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
+                <h2 class="rq-title-secondary">Misi</h2>
+                <p class="about-text" style="color: black ;">
+                  Membangun ekosistem usaha kopi yang kuat, inovatif dan memelihara keselarasan bersama
+                </p>
+                <h2 class="rq-title-secondary">Nilai-Nilai</h2>  
+                <p class="about-text">
+                  <ol style="color: black;">
+                    <li>Menginspirasi tumbuhnya usaha yang mengedepankan inovasi dan kreativitas.</li>
+                    <li>Bertindak menjalankan usaha secara transparan, bertanggung jawab, dan bermanfaat bagi sosial dan lingkungan.</li>
+                    <li>Membangun sumber daya manusia yang handal, profesional dan membumi.</li>
+                    <li>Tumbuh bersama kinerja yang manusiawi dan penuh kekeluargaan.</li>
+                  </ol>
+                </p>
               </div>
               <div class="rq-user-assigned-listing">
-                <h3 class="rq-title-secondary">Assigned listing</h3>
+                <h3 class="rq-title-secondary">Other Start-Up</h3>
                 <div class="rq-category-result" id="rq-category-result">
                   <div class="row">
                     <div class="col-md-6">
                       <div class="rq-category-result-items">
-                        <a href="listing-detail.html" class="wow fadeIn" >
+                        <a href="cangkirbumi.html" class="wow fadeIn" >
                           <div class="rq-category-result-single">
                             <div class="rq-result-img">
                               <img src="assets/dist/img/real-estate/listing-category/listing-1.png" alt=""/>
                             </div>
                             <div class="rq-result-text">
-                              <h4>super villa for sale</h4>
-                              <p class="rq-listing-item-address">2495 Tident St, NY</p>
-                              <h3><span class="new-price">$850,00</span></h3>
+                              <h4>Cangkir Bumi</h4>
+                              <p class="rq-listing-item-address">Jl. ... </p>
+                              <h3><span class="new-price">Cafe</span></h3>
                             </div>
                           </div>
                         </a>
 
-                        <a href="listing-detail.html" class="wow fadeIn" >
+                        <a href="tentrembumi.html" class="wow fadeIn" >
                           <div class="rq-category-result-single">
                             <div class="rq-result-img">
                               <img src="assets/dist/img/real-estate/listing-category/listing-2.png" alt=""/>
                             </div>
                             <div class="rq-result-text">
-                              <h4>detachted house to rent</h4>
-                              <p class="rq-listing-item-address">368 Brooklyn St, NY</p>
-                              <h3><span class="new-price">$250,00</span></h3>
+                              <h4>Tentrem Bumi</h4>
+                              <p class="rq-listing-item-address">JL. ...</p>
+                              <h3><span class="new-price">Cafe</span></h3>
                             </div>
                           </div>
                         </a>
@@ -191,31 +187,19 @@
                     </div>
                     <div class="col-md-6">
                       <div class="rq-category-result-items">
-                        <a href="listing-detail.html" class="wow fadeIn" >
+                        <a href="bumisuplai.html" class="wow fadeIn" >
                           <div class="rq-category-result-single">
                             <div class="rq-result-img">
                               <img src="assets/dist/img/real-estate/listing-category/listing-4.png" alt=""/>
                             </div>
                             <div class="rq-result-text">
-                              <h4>apartment to rent</h4>
-                              <p class="rq-listing-item-address">242 Avenue C St, NY</p>
-                              <h3><span class="new-price">$350,00</span></h3>
+                              <h4>Bumi Suplai</h4>
+                              <p class="rq-listing-item-address">JL. ...</p>
+                              <h3><span class="new-price">Supplier</span></h3>
                             </div>
                           </div>
                         </a>
 
-                        <a href="listing-detail.html" class="wow fadeIn" >
-                          <div class="rq-category-result-single">
-                            <div class="rq-result-img">
-                              <img src="assets/dist/img/real-estate/listing-category/listing-3.png" alt=""/>
-                            </div>
-                            <div class="rq-result-text">
-                              <h4>small house for sale</h4>
-                              <p class="rq-listing-item-address">196 Halsey St, NY</p>
-                              <h3><span class="new-price">$550,00</span></h3>
-                            </div>
-                          </div>
-                        </a>
                       </div>
                     </div>
                   </div>
@@ -306,7 +290,7 @@
       <div class="rq-copyright-section">
         <div class="container">
           <div class="copyright-content">
-            <p>Copyrights © 2015 by <a href="#">SCHOLAR.</a> All Rights Reserved.</p>
+            <p>Copyrights © 2022 Cangkir Bumi with theme by <a href="#">SCHOLAR.</a> All Rights Reserved. Develop by Ari Dimas</p>
             <ul class="list-unstyled social-list">
               <li><a href="#">Home</a></li>
               <li><a href="#">Properties</a></li>
