--- a/cangkirbumi.html
+++ b/cangkirbumi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Agency Single</title>
+    <title>BUMI SEDUH</title>
     <!-- Main style -->
     <link rel="shortcut icon" href="./assets/dist/img/logo/11.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/dist/css/real-estate.style.css">
@@ -24,8 +24,8 @@
     <div id="main-wrapper">
       <header class="header">
         <div class="headroom-sticky sticky-scroll">
-          <nav class="navbar navbar-default">
-            <div class="container-fluid">
+          <nav class="navbar navbar-default navbar-home with-location">
+            <div class="container">
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -41,50 +41,34 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class=""><a href="index.html" >Home</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
-                      <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
-                      <li><a href="bumisuplai.html">Bumi Suplai</a></li>
-                    </ul>
-                  </li>
-                  <li class=""><a href="lokasi.html" >Lokasi</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="blog-grid.html">Blog Grid</a></li>
-                      <li><a href="blog-list-thumb.html">Blog List Thumb</a></li>
-                      <li><a href="blog-listing.html">Blog Listing</a></li>
-                      <li><a href="blog-masonary.html">Blog Masonary</a></li>
-                      <li><a href="post-image-single.html">Single Image Post</a></li>
-                      <li><a href="post-gallery-single.html">Single Gallery Post</a></li>
-                      <li><a href="post-video-single.html">Single Video Post</a></li>
-                      <li><a href="post-audio-single.html">Single audio Post</a></li>
-                    </ul>
-                  </li>
-                  <li class=""><a href="bumiseduh.html" >Profil</a></li>
-
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Page <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="contact-us.html">Contact Us</a></li>
-                      <li><a href="pricing-plan.html">Plan &amp; Pricing</a></li>
-                      <li><a href="coming-soon.html">Coming Soon </a></li>
-                      <li><a href="page-404.html">404 page</a></li>
-                      <li><a href="media-elements.html">Media elements</a></li>
-                      <li><a href="typography.html">Typography</a></li>
-                      <li><a href="elements.html">Common elements</a></li>
-                    </ul>
-                  </li>
-                  <li class="login-register-link"><a href="registration.html">
-                      <i class="icon_lock-open_alt"></i>Login or Register</a>
-                  </li>
-                </ul>
+                  <li class="active"><a href="index.html" >Home</a></li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
+                        <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
+                        <li><a href="bumisuplai.html">Bumi Suplai</a></li>
+                      </ul>
+                    </li>
+                    <li class=""><a href="lokasi.html" >Lokasi</a></li>
+                    </li>
+                    <li><a href="bumiseduh.html">Profil</a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="blog-grid.html">Blog Grid</a></li>
+                        <li><a href="blog-list-thumb.html">Blog List Thumb</a></li>
+                        <li><a href="blog-listing.html">Blog Listing</a></li>
+                        <li><a href="blog-masonary.html">Blog Masonary</a></li>
+                        <li><a href="post-image-single.html">Single Image Post</a></li>
+                        <li><a href="post-gallery-single.html">Single Gallery Post</a></li>
+                        <li><a href="post-video-single.html">Single Video Post</a></li>
+                        <li><a href="post-audio-single.html">Single audio Post</a></li>
+                      </ul>
+                  </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </nav>
