--- a/lokasi.html
+++ b/lokasi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lokasi</title>
+    <title>BUMI SEDUH</title>
     <!-- Main style -->
     <link rel="shortcut icon" href="./assets/dist/img/logo/11.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/dist/css/real-estate.style.css">
